frontend/assets/css/styles.css
.emoji {
  font-family: apple color emoji,segoe ui emoji,noto color emoji,android emoji,emojisymbols,emojione mozilla,twemoji mozilla,segoe ui symbol;
  font-weight: 400;
}


@media (prefers-color-scheme: light) {
  :root {
    --accent-color-1: rgb(70, 184, 255);
    --accent-color-1-light: rgb(168, 222, 255);
    --accent-color-2: rgb(255, 133, 152);
    --accent-color-interactible: #e0e0e0;
    --background-color: white;
    --main-content-color: black;
    --link-color: rgb(0, 40, 216);
    --overlay-gradient: linear-gradient(45deg, rgba(2,0,36,1) 0%, rgba(9,9,121,0.5) 35%, rgba(0,212,255,1) 100%);
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    --accent-color-1: rgb(11, 73, 92);
    --accent-color-1-light: rgb(4, 53, 65);
    --accent-color-2: #6d2433;
    --accent-color-interactible: #303030;
    --background-color: black;
    --main-content-color: rgb(255, 255, 255);
    --link-color: rgb(122, 146, 255);
    --overlay-gradient: linear-gradient(45deg, rgb(17 10 146) 0%, rgba(9, 9, 121, 0.5) 35%, rgb(0 125 151) 100%);
  }

  img.svg-icon {
    filter: invert(1);
  }
}


:root {
  --font-color: var(--main-content-color);
  --header-background-color: var(--accent-color-1);
  --subheader-1-background-color: var(--accent-color-2);
  --subheader-2-background-color: var(--accent-color-1);
  --nli-color: var(--accent-color-interactible);
  --nli-color-hover: var(--accent-color-1-light);
  --nli-color-active: var(--accent-color-1);
  --nli-color-linked: var(--accent-color-2);
  --nli-color-unlinked: var(--accent-color-1-light);
  --buton-background-color: var(--accent-color-interactible);
  --input-element-border-color: var(--main-content-color);
  --button-background-color-active: var(--accent-color-1);
  --table-row-background-color-odd: var(--background-color);
  --table-row-background-color-even: var(--accent-color-interactible);
  --main-font: 'Rubik', sans-serif;
  --input-border-width: 2px;
  --border-radius: 10px;
  --default-margin: 15px;
  --xl-list-width: 720px;
  --small-font-size: 13px;
  --default-font-size: 16px;
  --large-font-size: 24px;
  --h1-font-size: 28px;
  --header-bar-height: 50px;
  --max-content-width: 1000px;
  --default-box-shadow:
    0 1px 1px hsl(0deg 0% 0% / 0.075),
    0 2px 2px hsl(0deg 0% 0% / 0.075),
    0 4px 4px hsl(0deg 0% 0% / 0.075),
    0 8px 8px hsl(0deg 0% 0% / 0.075),
    0 16px 16px hsl(0deg 0% 0% / 0.075);
}

h1 {
  font-size: var(--h1-font-size);
}

#app-menu {
  background-color: var(--header-background-color);
  z-index: 1;
}

.app-menu-item:hover{
  background-color: var(--accent-color-1-light);
}


#pinned-notes::-webkit-scrollbar {
  display: none;
}

.pinned-note:hover {
  background-color: var(--nli-color-hover);
}

.pinned-note.active {
  background-color: var(--accent-color-2);
}


input, select {
  border: var(--input-border-width) solid var(--main-content-color) !important;
  font-size: var(--large-font-size);
  background: var(--background-color);
  color: var(--font-color);
  margin: 10px 0px;
}

input[type="radio"] {
  width: 24px;
  height: 24px;
  margin: 0;
}

body, #app {
  margin: 0;
  padding: 0;
  background-color: var(--background-color);
  color: var(--font-color);
}

body, #app, input, select, button {
  font-family: var(--main-font);
}


a {
  color: var(--link-color);
}

header {
  background: var(--header-background-color);
  margin: 0;
  padding: 0px;
  padding-right: 10px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: var(--header-bar-height);
  user-select: none;

  width: 100vw;
  box-sizing: border-box;
  top: 0;
  left: 0;
  z-index: 5;
}

header h1 {
  margin: 0;
  font-size: x-large;
}

#header-left {
  display: flex;
  justify-content: center;
  height: var(--header-bar-height);
  align-items: center;
}


#header-left #status {
  text-align: left;
}

#header-right {
  display: flex;
  height: var(--header-bar-height);
  align-items: center;
}

.app-stats-item {
  margin-left: 15px;
}

#header-right input {
  width: 240px;
  height: 24px;
}


#heading {
  margin: 0px;
  padding: 11px 10px;
  font-size: var(--large-font-size);
  white-space: pre;
}

#heading:hover {
  background-color: var(--nli-color-hover);
}

#header-controls {
  display: inline-block;
}

main {
  display: grid;
}

#section-search-input{
  background-color: var(--subheader-1-background-color);
}

#note-controls {
  background-color: var(--subheader-1-background-color);
  user-select: none;
}

#note-controls-left {
  display: flex;
}

#note-content {
  max-width: var(--max-content-width);
  margin: auto;
}

.icon-button {
  height: 50px;
  display: inline-block;
  border: none;
  cursor: pointer;
  width: 50px;
  min-width: 50px;
  padding: 0;
  background: none;
  text-align: center;
}

.icon-button[disabled]{
  color: grey;
  fill: grey;
  cursor: inherit;
  border: none;
}

.icon-button img {
  vertical-align: middle;
}

.icon-button-floating {
  display: block;
  position: fixed;
  bottom: 20px;
  right: 20px;
  border: none;
  cursor: pointer;
  min-width: 50px;
  padding: 18px;
  background: var(--accent-color-2);
  text-align: center;
  border-radius: 100px;
  width: 60px;
  height: 60px;
  box-shadow: var(--default-box-shadow);
}

button {
  border-radius: var(--border-radius);
  border: none;
  cursor: pointer;
  background-color: var(--buton-background-color);
  color: var(--font-color);
}

button[disabled]{
  color: grey;
  fill: grey;
  cursor: inherit;
  border: none;
}


.pagination-ellipsis {
  margin-right: 10px;
}

.pagination-button-selected {
  background-color: var(--button-background-color-active);
  font-weight: bold;
}

#note-list {
  border-collapse: collapse;
  width: 100%;
}

.note-list-item {
  text-align: left;
  display: flex;
  background-color: var(--nli-color);
  margin: auto;
  margin-bottom: var(--default-margin);
  border-radius: var(--border-radius);
  overflow: hidden;
  user-select: none;
  max-width: var(--max-content-width);
}

.note-list-item-main {
  cursor: pointer;
  padding: 15px;
  width: calc(100% - 70px);
}

.note-list-item-main .title {
  font-size: var(--default-font-size);
}

.note-list-item-second-row {
  font-size: var(--small-font-size);
  display: flex;
  justify-content: space-between;
}

.note-list-item .link-control {
  text-align: left;
  padding: 5px;
  width: 30px;
  background-color: var(--nli-color-unlinked);
  display: flex;
  align-items: center;
  justify-content: center;
}

.note-list-item:not(.active) .link-control.linkable {
  cursor: pointer;
}

.note-list-item .title{
  font-weight: bold;
}

.note-list-item .index {
  width: 56px;
}

.note-list-item .noteListItemControls {
  height: 36px;
  text-align: right;
  padding: 0px 5px;
}

.noteListItemButton {
  height: 32px;
  cursor: pointer;
}

.note-list-item .linkedNotesIndicatorNumber {
  text-align: center;
  display: block;
  font-weight: bold;
}

.note-list-item .info{
  display: inline;
}

.note-list-item:not(.active) .note-list-item-main:hover {
  background-color: var(--nli-color-hover);
}

.note-list-item[class*="active"]{
  background-color: var(--nli-color-active) !important;
}

.note-list-item.active .link-control {
  background-color: var(--nli-color-active);
}

.note-list-item[class*="linked"] .link-control{
  background-color: var(--nli-color-linked);
}


.dialog-box {
  background-color: var(--background-color);
  color: var(--font-color);
  max-width: 400px;
  display: block;
  padding: var(--default-margin);
  margin: auto;
  border-radius: var(--border-radius);
  box-shadow: var(--default-box-shadow);
  max-height: calc(100vh - (2 * var(--default-margin)));
  overflow: auto;
}

.dialog-box h1 {
  margin-top: 0px;
}

.import-link-dialog textarea {
  background-color: var(--background-color);
  color: var(--font-color);
  margin-bottom: 15px;
  width: calc(100% - 5px);
  display: block;
  height: 200px;
}

.small-button {
  font-size: var(--default-font-size);
  margin-right: 10px;
  padding: 10px;
  margin-bottom: var(--default-margin);
}

.default-button {
  font-size: var(--large-font-size);
  margin-right: 10px;
  padding: 10px 20px;
  margin-bottom: var(--default-margin);
}

.default-button.default-action {
  background-color: var(--accent-color-1);
}

.default-button.dialog-box-button {
  margin-bottom: 0px;
}

.data-table {
  border-collapse: collapse;
  margin: var(--default-margin) 0px;
  width: 100%;
}


.data-table tr:nth-child(odd) {
  background-color: var(--table-row-background-color-odd);
}

.data-table tr:nth-child(even) {
  background-color: var(--table-row-background-color-even);
}

.data-table th, .data-table td {
  text-align: left;
  padding: 5px;
}


.stats-table tr td:nth-of-type(2) {
  text-align: right;
}


#section_login {
  font-size: var(--large-font-size);
  padding: 20px;
  box-sizing: border-box;
  width: 100vw;
  margin: auto;
  height: calc(100vh - var(--header-bar-height));
  overflow: auto;
}

#section_login input {
  font-size: var(--large-font-size);
  padding: 5px;
  color: var(--font-color);
}


#overlay {
  position: fixed;
  width: 100vw;
  height: 100vh;
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;
  background: var(--overlay-gradient);
  display: grid;
  align-items: center;
  z-index: 100;
}


#note-controls, #section-search-input {
  padding: 0px 10px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  max-width: 100vw;
  overflow: hidden;
}


#section_list {
  padding: var(--default-margin);
  padding-bottom: 0;
}


#app-stats {
  white-space: pre;
}


@media only screen and (min-width: 1281px) {
  body, #app{
    overflow: hidden;
  }
  
  main {
    grid-template-columns: var(--xl-list-width) auto;
    grid-template-rows: 100%;
    position: fixed;
    bottom: 0px;
    top: var(--header-bar-height);
    width: 100%;
  }

  #left-view{
    grid-area: 1 / 1 / 2 / 2;
    width: var(--xl-list-width);
    box-shadow: var(--default-box-shadow);
  }

  #note-controls, #section-search-input {
    height: var(--header-bar-height);
  }

  #section_list{
    overflow-y: scroll;
    /* height is 100vh minus 2 headers of 50px height and minus top padding of
    this element */
    height: calc(100vh - (2 * var(--header-bar-height)) - var(--default-margin));
  }

  #right-view{
    grid-area: 1 / 2 / 2 / 3;
    width: calc(100vw - var(--xl-list-width));
  }

  #note{
    margin: 0;
    padding: 0;
    padding-bottom: 15px;
  }

  #note-content{
    padding: 0px 48px;
    overflow-y: auto;
    height: calc(100vh - (2 * var(--header-bar-height)));
  }
}



@media only screen and (max-width: 1280px){
  main {
    grid-template-columns: 1fr;
  }

  #app-stats{
    display: none;
  }

  #left-view{
    grid-area: 2 / 1 / 3 / 2;
  }

  #note-controls, #section-search-input {
    flex-wrap: wrap;
  }

  #right-view{
    grid-area: 1 / 1 / 2 / 2;
  }

  #note-content{
    padding: 0px var(--default-margin);
  }
}

